--- a/GPRSTest/MapInfoView.xib
+++ b/GPRSTest/MapInfoView.xib
@@ -40,10 +40,10 @@
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUILabel" id="508339144">
+							<object class="IBUILabel" id="264556534">
 								<reference key="NSNextResponder" ref="512295293"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{168, 6}, {42, 21}}</string>
+								<string key="NSFrame">{{7, 6}, {98, 21}}</string>
 								<reference key="NSSuperview" ref="512295293"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -51,7 +51,7 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">dist.</string>
+								<string key="IBUIText">00:00:00:00</string>
 								<object class="NSColor" key="IBUITextColor" id="231628610">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MCAwIDAAA</bytes>
@@ -63,55 +63,17 @@
 									<int key="type">1</int>
 									<double key="pointSize">17</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="361472494">
+								<object class="NSFont" key="IBUIFont" id="38908896">
 									<string key="NSName">Helvetica</string>
 									<double key="NSSize">17</double>
 									<int key="NSfFlags">16</int>
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
-							<object class="IBUILabel" id="977655318">
-								<reference key="NSNextResponder" ref="512295293"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 6}, {40, 21}}</string>
-								<reference key="NSSuperview" ref="512295293"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">time</string>
-								<reference key="IBUITextColor" ref="231628610"/>
-								<nil key="IBUIHighlightedColor"/>
-								<int key="IBUIBaselineAdjustment">0</int>
-								<reference key="IBUIFontDescription" ref="565294537"/>
-								<reference key="IBUIFont" ref="361472494"/>
-								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-							</object>
-							<object class="IBUILabel" id="264556534">
-								<reference key="NSNextResponder" ref="512295293"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{62, 6}, {98, 21}}</string>
-								<reference key="NSSuperview" ref="512295293"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">00:00:00:00</string>
-								<reference key="IBUITextColor" ref="231628610"/>
-								<nil key="IBUIHighlightedColor"/>
-								<int key="IBUIBaselineAdjustment">0</int>
-								<reference key="IBUIFontDescription" ref="565294537"/>
-								<reference key="IBUIFont" ref="361472494"/>
-								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-							</object>
 							<object class="IBUILabel" id="881830258">
 								<reference key="NSNextResponder" ref="512295293"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{212, 6}, {88, 21}}</string>
+								<string key="NSFrame">{{130, 6}, {61, 21}}</string>
 								<reference key="NSSuperview" ref="512295293"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -119,12 +81,31 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">0</string>
+								<string key="IBUIText">0 m</string>
 								<reference key="IBUITextColor" ref="231628610"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<reference key="IBUIFontDescription" ref="565294537"/>
-								<reference key="IBUIFont" ref="361472494"/>
+								<reference key="IBUIFont" ref="38908896"/>
+								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+							</object>
+							<object class="IBUILabel" id="362343042">
+								<reference key="NSNextResponder" ref="512295293"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{215, 6}, {78, 21}}</string>
+								<reference key="NSSuperview" ref="512295293"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<string key="IBUIText">0.00m/s</string>
+								<reference key="IBUITextColor" ref="231628610"/>
+								<nil key="IBUIHighlightedColor"/>
+								<int key="IBUIBaselineAdjustment">0</int>
+								<reference key="IBUIFontDescription" ref="565294537"/>
+								<reference key="IBUIFont" ref="38908896"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 						</array>
@@ -140,7 +121,7 @@
 					<object class="IBUIView" id="64403176">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 34}, {320, 347}}</string>
+						<string key="NSFrame">{{0, 34}, {320, 375}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -159,7 +140,7 @@
 							<object class="IBUIButton" id="520296118">
 								<reference key="NSNextResponder" ref="455866532"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{43, 16}, {73, 44}}</string>
+								<string key="NSFrame">{{12, 5}, {73, 44}}</string>
 								<reference key="NSSuperview" ref="455866532"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -193,7 +174,7 @@
 							<object class="IBUIButton" id="154711744">
 								<reference key="NSNextResponder" ref="455866532"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{166, 16}, {73, 44}}</string>
+								<string key="NSFrame">{{242, 5}, {73, 44}}</string>
 								<reference key="NSSuperview" ref="455866532"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -212,7 +193,7 @@
 								<reference key="IBUIFont" ref="350928645"/>
 							</object>
 						</array>
-						<string key="NSFrame">{{0, 381}, {320, 79}}</string>
+						<string key="NSFrame">{{0, 407}, {320, 53}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -293,11 +274,19 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">lblSpeed</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="362343042"/>
+					</object>
+					<int key="connectionID">50</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">rightbtn</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="154711744"/>
 					</object>
-					<int key="connectionID">46</int>
+					<int key="connectionID">51</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -351,22 +340,11 @@
 						<int key="objectID">26</int>
 						<reference key="object" ref="512295293"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="977655318"/>
-							<reference ref="508339144"/>
 							<reference ref="264556534"/>
+							<reference ref="362343042"/>
 							<reference ref="881830258"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">27</int>
-						<reference key="object" ref="508339144"/>
-						<reference key="parent" ref="512295293"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">28</int>
-						<reference key="object" ref="977655318"/>
-						<reference key="parent" ref="512295293"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">31</int>
@@ -403,6 +381,11 @@
 						<reference key="object" ref="520296118"/>
 						<reference key="parent" ref="455866532"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">49</int>
+						<reference key="object" ref="362343042"/>
+						<reference key="parent" ref="512295293"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -412,20 +395,19 @@
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="26.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="27.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="28.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="31.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="36.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="37.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="38.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="39.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="40.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="49.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">48</int>
+			<int key="maxID">51</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
